force-app/main/default/objects/objPRJCSSAIdSearch__c/objPRJCSSAIdSearch__c.object-meta.xml
<CustomObject>
    <description>Stores decoded South African ID number searches and a per-ID search counter (CloudSmiths assignment - User Story 3).</description>
    <label>SA ID Search</label>
    <nameField>
        <displayFormat>SAID-{00000}</displayFormat>
        <label>SA ID Search Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SA ID Searches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>