force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSDateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSDateOfBirth__c</fullName>
    <description>Date of birth decoded from the first 6 digits of the SA ID number (User Story 3).</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>