force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSGender__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSGender__c</fullName>
    <description>Gender decoded from digits 7-10 of the SA ID number (0000-4999 = Female, 5000-9999 = Male). User Story 3.</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>