force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSHolidayYear__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSHolidayYear__c</fullName>
    <description>Year of birth used to query the Calendarific holiday API (User Story 4).</description>
    <label>Holiday Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>