force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSIdNumber__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSIdNumber__c</fullName>
    <description>The 13-digit South African ID number. Unique external key used for upsert and as the reference for the search counter (User Story 3).</description>
    <externalId>true</externalId>
    <label>ID Number</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>