force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSLastSearchedDate__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSLastSearchedDate__c</fullName>
    <description>Timestamp of the most recent search for this ID number (User Story 3).</description>
    <label>Last Searched Date</label>
    <type>DateTime</type>
</CustomField>