force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSSaCitizen__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSSaCitizen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True = SA Citizen, False = Permanent Resident (digit 11 of the SA ID number: 0 = citizen, 1 = permanent resident). User Story 3.</description>
    <label>SA Citizen</label>
    <type>Checkbox</type>
</CustomField>