force-app/main/default/objects/objPRJCSSAIdSearch__c/fields/fldPRJCSSearchCount__c.field-meta.xml
<CustomField>
    <fullName>fldPRJCSSearchCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of times this ID number has been searched. Incremented on every valid search of the same ID (User Story 3).</description>
    <label>Search Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>